# norlab_imu_tools

./: CMakeLists.txt  README.md  package.xml
launch/: altitude_computation_launch.xml  altitude_moving_average_launch.xml  bag_gyro_and_gps_to_tf.launch  bag_imu_to_tf.launch  bag_imu_to_tf_for_vanilla_mappers.launch  bag_imu_to_tf_kv.launch  husky_imu_and_wheel_odom.launch  husky_imu_and_wheel_odom_launch.xml  imu_bias_compensator_launch.xml  imu_bias_observer_for_warthog.launch  imu_bias_observer_for_warthog_launch.xml  imu_complemetary_filter.launch  imu_to_tf.launch  jfr2019_warthog_imu_to_tf_for_vanilla_mappers.launch  jfr2020_rosbag_rec_odoms.launch  marmotte_imu_and_wheel_odom_launch.xml  new_lidar_bag_imu_to_tf_for_vanilla_mappers.launch  new_lidar_new_imu_to_tf_for_vanilla_mappers.launch  pressure_moving_average_launch.xml  rosbag_rec_odoms.launch  scutigera_bag_imu_to_tf.launch  scutigera_rosbag_rec_odoms.launch  temperature_moving_average_launch.xml  warthog_imu_and_wheel_odom.launch  warthog_imu_and_wheel_odom_launch.xml
launch/old_files_to_refactor/: imu_complemetary_filter.launch  interactive_static_transform_publisher.launch  rosbag_rec_odoms.launch  utm_odometry_only.launch
scripts/: add_angular_velocity_to_odom.py  extract_odometry_from_file.py  fake_prior_publisher.py  icp_trajectory_to_fake_prior.py  interactive_static_transform_publisher.py  odom_topic_to_imu_topic.py  static_tf_collect_and_republish.py
src/: altitude_computation_node.cpp  altitude_moving_average_node.cpp  gps_gyro_odom_to_tf.cpp  imu_and_wheel_odom_node.cpp  imu_attitude_and_fix_to_tf_node.cpp  imu_attitude_to_tf_node.cpp  imu_bias_compensator_node.cpp  imu_bias_observer.cpp  jfr2019_warthog_imu_attitude_and_fix_to_tf_node.cpp  pressure_moving_average_node.cpp  temperature_moving_average_node.cpp
